# distributed-training-module

./: README.md
client/: client_code.py
client/train/: client.py  client_normal.py  cnn_train.py  download_data.py  gradients.proto  gradients_pb2_grpc.py  pipeline.py  tt.py
server/: CMakeLists.txt  gradients.proto  gradients_pb2.py  server.py  server_nomal.py
server/db/: creating_mnist_images.py  distributing_Data.py  ff.py  mnist_labels.csv  python_creating_database.py
shared/: gradients.proto
